- Fix input container for project naming not showing - Add styling for overlay

--- a/style.css
+++ b/style.css
@@ -76,15 +76,16 @@ aside li span {
   justify-content: center;
 }
 
-.project-name-input {
-  background-color: rgb(112, 43, 43);
+#input-container {
   margin-top: 18px;
   padding: 8px;
-  display: flex;
+  background-color: rgb(112, 43, 43);
+  display: none;
   justify-content: space-around;
   gap: 8px;
 }
-.project-name-input input {
+
+#input-container input {
   width: 50%;
 }
 
@@ -127,10 +128,10 @@ aside li span {
 
 /* ----- CREATE TASK CARD ----- */
 
-.create-task {
+.create-task, .overlay {
   padding: 12px;
   background-color: rgb(183, 231, 231);
-  display: flex;
+  display: none;
   flex-direction: column;
   gap: 24px;
   width: 50%;
@@ -182,4 +183,26 @@ aside li span {
 footer {
   text-align: center;
   background-color: darkgreen;
+}
+
+/* --------------- OVERLAY --------------- */
+
+.overlay-container {
+  position: fixed;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%; 
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+}
+
+.overlay {
+  display: flex;
+  width: 40%;
 }
